syntax = "proto3";

// protoc -I logic logic/logic.proto --go_out=plugins=grpc:logic
package logic;

service logicService{
  rpc GetAddr(GetAddrReq) returns (GetAddrReply){}
}

message GetAddrReq{
  string service_name = 1;
}

message GetAddrReply{
  int32 code = 1;
  string  addr = 2;
}